--- a/scriptbundle/gunshipsettings_mp.json
+++ b/scriptbundle/gunshipsettings_mp.json
@@ -24,7 +24,7 @@
     "var_77c7a074": 400,
     "var_efc15586": 10,
     "var_e1d36c37": 300,
-    "var_3d203f52": 3,
+    "lightgroups_1_slots": 3,
     "turret_fire_burst_max": 5,
     "var_2c69a255": 5,
     "var_93360fe": 10,
