--- a/scriptbundle/player_ground_vehicle_settings_atv_wz.json
+++ b/scriptbundle/player_ground_vehicle_settings_atv_wz.json
@@ -32,7 +32,7 @@
     "var_78819fa": 21.08,
     "var_baee021b": 13.48,
     "max_duration": 30,
-    "var_ee802f44": 2,
+    "lightgroups_2_slots": 2,
     "damagestate_lv4_ratio": 0.75,
     "damagestate_lv2_ratio": 0.75,
     "var_c5e4c9ab": 200,
