--- a/scriptbundle/player_ground_vehicle_settings_buggy_wz.json
+++ b/scriptbundle/player_ground_vehicle_settings_buggy_wz.json
@@ -39,7 +39,7 @@
     "vehicletype": "none",
     "max_duration": 30,
     "var_b92dc3b3": "#hash_491f5bd2678c3c0b",
-    "var_ee802f44": 3,
+    "lightgroups_2_slots": 3,
     "damagestate_lv4_ratio": 0.75,
     "damagestate_lv2_ratio": 0.5,
     "var_c5e4c9ab": 200,
